// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`details should build correct query with connections 1`] = `
with rivers_connection as (
    select
        rivers_view.id,
        rivers_view.language,
        rivers_view.name,
        rivers_view.region_id
    from
        rivers_view
    where
        rivers_view.language = 'en'
    order by
        rivers_view.name asc
)
select
    regions_view.id,
    regions_view.language,
    regions_view.name,
    regions_view.description,
    regions_view.season,
    regions_view.season_numeric,
    regions_view.bounds,
    regions_view.pois,
    regions_view.hidden,
    regions_view.created_at,
    regions_view.updated_at, (with rivers_connection_internal as (
            select
                rivers_connection.*,
                COALESCE(count(rivers_connection.*)
                    OVER (),
                    0)
            from
                rivers_connection
            where
                rivers_connection.region_id = regions_view.id
)
        select
            json_build_object('count', (
                    select
                        rivers_connection_internal.count from rivers_connection_internal
                    limit 1),
                'nodes', (
                    select
                        json_agg (rivers_connection_internal.*)
                    from
                        rivers_connection_internal))) as rivers
from
    regions_view
where
    regions_view.language = 'en'
order by
    regions_view.name asc

`;

exports[`details should build correct query without connections 1`] = `
select
    regions_view.id,
    regions_view.language,
    regions_view.name,
    regions_view.description,
    regions_view.season,
    regions_view.season_numeric,
    regions_view.bounds,
    regions_view.pois,
    regions_view.hidden,
    regions_view.created_at,
    regions_view.updated_at
from
    regions_view
where
    regions_view.language = 'en'
order by
    regions_view.name asc

`;

exports[`list should build correct query with connections 1`] = `
with rivers_connection as (
    select
        rivers_view.id,
        rivers_view.region_id
    from
        rivers_view
    where
        rivers_view.language = 'en'
    order by
        rivers_view.name asc
)
select
    regions_view.id,
    regions_view.language,
    regions_view.name,
    regions_view.description,
    regions_view.season,
    regions_view.season_numeric,
    regions_view.bounds,
    regions_view.pois,
    regions_view.hidden,
    regions_view.created_at,
    regions_view.updated_at, (with rivers_connection_internal as (
            select
                rivers_connection.*,
                COALESCE(count(rivers_connection.*)
                    OVER (),
                    0)
            from
                rivers_connection
            where
                rivers_connection.region_id = regions_view.id
)
        select
            json_build_object('count', (
                    select
                        rivers_connection_internal.count from rivers_connection_internal
                    limit 1))) as rivers,
count(regions_view.*)
OVER ()
from
    regions_view
where
    regions_view.language = 'en'
order by
    regions_view.name asc

`;

exports[`list should build correct query without connections 1`] = `
select
    regions_view.id,
    regions_view.language,
    regions_view.name,
    regions_view.description,
    regions_view.season,
    regions_view.season_numeric,
    regions_view.bounds,
    regions_view.pois,
    regions_view.hidden,
    regions_view.created_at,
    regions_view.updated_at,
    count(regions_view.*)
    OVER ()
from
    regions_view
where
    regions_view.language = 'en'
order by
    regions_view.name asc

`;
